--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 <div id="root">
 
 </div>
+<script src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="./index.js" type="module"></script>
 </body>
 </html>
