--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
    <nav>
-    <p class="display-6"> Trader Helper </p>
+    <p class="display-6 " >  <center>Trader Helper</center>   </p>
    </nav>
+   <p id="errorMessage" > </p>
 
     
 <div id="root">
